<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">AdAggregator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">ad.aggregator.com</string>
    <string name="content_authority">com.ad.aggregator.app</string>

    <string name="text_home">Home</string>
    <string name="text_chefs">Chefs</string>
    <string name="text_shows">Shows</string>
    <string name="text_search">Search</string>
    <string name="text_mystuff">My Stuff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
